# RoboTwin

./: .envrc  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  README.md  docker-compose.headless.yaml  docker-compose.x11.yaml  entrypoint.sh
script/: _install.sh  robotwin_policy_obs.py  robotwin_run_utils.py  run_demo_ws.py  run_eval_ws.py  uv_sync_local.sh
